feat(personal-finance): Struct
added templates struct blade.

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,10 @@
   ],
   "require": {
     "illuminate/events": "^8.0",
-    "illuminate/routing": "^8.0"
+    "illuminate/routing": "^8.0",
+    "illuminate/container": "^8.0",
+    "illuminate/contracts": "^8.0",
+    "illuminate/filesystem": "^8.0",
+    "illuminate/view": "^8.0"
   }
 }
