--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
       "PersonalFinance\\": "src",
       "PersonalFinance\\database\\": "src/database",
       "PersonalFinance\\Entities\\": "src/entities",
-      "PersonalFinance\\Services\\": "src/services"
+      "PersonalFinance\\Services\\": "src/services",
+      "PersonalFinance\\Controllers\\": "src/controllers",
+      "PersonalFinance\\Core\\": "src/core"
     }
   },
   "authors": [
