--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,31 @@
 version: '3'
 
 services:
-  php-app:
-    build:
-      context: .
-      dockerfile: docker/php82/Dockerfile
-    volumes:
-      - ./src:/app
+  web:
+    image: nginx:latest
+    container_name: nginx
+    restart: always
     ports:
-      - "8000:8000"
-    depends_on:
-      - sqlite-container
-
-  sqlite-container:
-    image: sqlite
+      - "80:80"
     volumes:
-      - ./personal_finance:/data
+      - ./:/var/www
+      - ./docker/nginx/site.conf:/etc/nginx/conf.d/site.conf
+    links:
+      - php
+  php:
+    image: php:8.2-fpm-alpine
+    container_name: php-fpm
+    volumes:
+      - ./:/var/www
+    links:
+      - db
+  db:
+    image: mysql:5.7
+    container_name: mysql
+    ports:
+      - "3306:3306"
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: personal_finance
